alignment corrections

--- a/styles/Contentchatbox.module.scss
+++ b/styles/Contentchatbox.module.scss
@@ -18,7 +18,7 @@
     background-color: #ffffff;
     position: absolute;
     bottom: 0;
-    top: 93%;
+    top: 90%;
     border-radius: 0 0 4% 4%;
 }
 
